tools/tests/errors/surf_num_18.ki
# Complex numbers are unordered; comparing with < must throw.
var c = import("complex")
discard c.of(1, 1) < c.of(2, 2)
